@@ -38,6 +38,7 @@ Verilator 5.001 devel
 * Add --dump-tree-dot to enable dumping Ast Tree .dot files (#3636). [Marcel Chang]
 * Add --get-supported to determine what features are in Verilator.
 * Add error on real edge event control.
+* Fix cell assigning integer array parameters (#3299). [Michael Platzer]
 * Fix LSB error on --hierarchical submodules (#3539). [danbone]
 * Fix $display of fixed-width numbers (#3565). [Iztok Jeras]
 * Fix foreach and pre/post increment in functions (#3613). [Nandu Raj]
